--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 ACCESS_TOKEN_SECRET=null
 REFRESH_TOKEN_SECRET=null
 
+AUTH_TTL='3600s'
+
 TYPEORM_CONNECTION=mysql
 TYPEORM_HOST=localhost
 TYPEORM_USERNAME=root
